--- a/feature/flight-tickets/src/main/AndroidManifest.xml
+++ b/feature/flight-tickets/src/main/AndroidManifest.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
         <activity
             android:name=".FlightTicketsActivity"
             android:exported="true"
-            android:label="@string/title_activity_flight_tickets" />
+            android:label="@string/title_activity_flight_tickets">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <intent-filter>
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="android.intent.action.VIEW" />
+
+                <data android:scheme="effectivem" />
+                <data android:host="tickets" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
